plugins {
	id 'org.springframework.boot' version '2.1.7.RELEASE'
	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
	id 'java'
}

group = 'co.jp.wever'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

test {
	useJUnitPlatform {
		includeEngines 'junit-jupiter'
	}
}

dependencies {
	implementation 'com.graphql-java:graphql-java:11.0'
	implementation 'com.graphql-java:graphql-java-spring-boot-starter-webmvc:1.0'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly "org.projectlombok:lombok"
	annotationProcessor "org.projectlombok:lombok"

	compile "org.apache.tinkerpop:gremlin-driver:3.4.3"
	compile "org.apache.tinkerpop:gremlin-groovy:3.4.3"

	compile "com.algolia:algoliasearch-core:3.4.0"
	compile "com.algolia:algoliasearch-apache:3.4.0"

	compile 'org.springframework.boot:spring-boot-starter-aop'

	compile 'com.auth0:jwks-rsa:0.4.0'
	compile 'com.auth0:java-jwt:3.3.0'

	compile "com.graphql-java-kickstart:graphql-spring-boot-starter:5.10.0"
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
}

